--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@
 	cursor: url('target.png'), default;
 }
 
+.js-fall-faller img {
+	user-select: none;
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+}
+
 .js-fall-explosion {
 	position: absolute; 
 	z-index: 8999; 
@@ -18,6 +25,15 @@
 	background-repeat: no-repeat;
 }
 
+.js-fall-splat {
+	position: absolute; 
+	z-index: 8998; 
+	
+	width: 80px;
+	height: 80px;
+	background-image: url('splat.png');
+}
+
 .js-fall-score {
 	position: fixed;
 	bottom: 30px;
@@ -25,4 +41,9 @@
 	
 	font-family: Courier, Sans-Serif;
 	font-size: 20pt;
+	
+	user-select: none;
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
 }
